backend: initial commit (.env.example + controllers/entities/services)